Make locking mode soft for new import subgraph